Fix stupid transition getting stuck again
............................................

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,9 +15,12 @@
 
 #sidebar .sidebar-container {
     box-sizing: content-box;
+    height: 100%;
+}
+
+#sidebar.collapse.show .sidebar-container {
     overflow-y: scroll;
     overflow-x: hidden;
-    height: 100%;
 }
 
 #sidebar .list-group {
